<resources>

    <string name="app_name">GitApp</string>

    <string name="stars">Stars</string>
    <string name="watchers">Watchers</string>
    <string name="forks">Forks</string>
    <string name="issues">Issues</string>

    <string name="full_name">Full Name:</string>
    <string name="default_branch">Default Branch:</string>

    <string name="created">Create:</string>
    <string name="updated">Last Update:</string>
    <string name="pushed">Last Push:</string>

    <string name="search">Search...</string>

</resources>
